# rpc7850

./: Cargo.toml  README.md  build.rs  memory.x  run.sh
.cargo/: config.toml
src/: config.example.rs  main.rs
src/hid/: controller.rs
