[package]
name = "rpc7850"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["critical-section-impl", "rp235xa", "time-driver"] }
embassy-time = "0.5.0"
