[package]
name = "rpc7850"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.8.0", features = ["medium-ethernet", "proto-ipv4", "tcp"] }
embassy-net-wiznet = "0.2.1"
embassy-rp = { version = "0.9.0", features = ["critical-section-impl", "rp235xa", "time-driver"] }
embassy-time = "0.5.0"
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "e8c480d0a5b859fcc0955e681f91c5b5088e0b07" }
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
heapless = "0.8"
static_cell = "2.1.1"
usbd-hid = "0.8"

[patch."https://github.com/embassy-rs/embassy.git"]
embassy-time = "0.5.0"
embassy-usb-driver = "0.2.0"